--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.1",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
